# shs-100k

./: README.md  pyproject.toml
src/: youtube_downloader.py
src/shs_100k/: youtube_downloader.py
src/shs_100k/utils/: logging_config.py
src/util/: logging_config.py
