[project]
name = "shs-100k"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "yuta-nishi", email = "ypmtk437.0209@gmail.com" }]
dependencies = [
    "ipykernel>=6.26.0",
    "yt-dlp>=2023.11.16",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.5",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "pip_search>=0.0.12",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 90

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
]
ignore = []
line-length = 90
