[project]
name = "shs-100k"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "yuta-nishi", email = "ypmtk437.0209@gmail.com" }]
dependencies = ["ipykernel>=6.26.0", "yt-dlp>=2023.11.16"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.1.7", "mypy>=1.7.1", "pip_search>=0.0.12"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
line-length = 90
