[project]
authors = [{ name = "yuta-nishi" }]
dependencies = ["ipykernel>=6.29.4", "yt-dlp>=2024.4.9"]
description = "SHS-100K"
name = "shs-100k"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = ["mypy>=1.10.0", "pytest>=8.2.0", "ruff>=0.4.4"]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shs_100k"]

[tool.ruff]
extend-include = ["*.ipynb"]
indent-width = 4
line-length = 90
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle warnings
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false

# https://github.com/python/mypy/issues/10632
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "yaml"
